# imessage-search

./: .gitignore  README.md  drizzle.config.ts  env.example  jest.config.js  package.json  pnpm-lock.yaml
.cursor/plans/: people-graph-memories-53f5d1c1.plan.md
chat-dashboard/: next.config.ts  package.json  pnpm-lock.yaml
chat-dashboard/app/: globals.css  layout.tsx  page.tsx
chat-dashboard/components/: analytics-chart.tsx  chat-message.tsx  chat-sidebar.tsx  keyboard-shortcuts.tsx  link-preview.tsx  nav.tsx  spotlight-modal.tsx
chat-dashboard/lib/: chat-history.ts  contacts.ts  elasticsearch.ts  embeddings.ts  messages-db.ts  people-graph.ts  reactions.ts
dashboard/: pyproject.toml
dashboard/pages/: browse.py
docker/: docker-compose.yml
scripts/: embed-images.py  es-reset.sh  es-start.sh  es-stop.sh  qdrant-reset.sh  qdrant-start.sh  qdrant-stop.sh  requirements.txt  setup.sh
src/: index.ts  server.ts
src/__tests__/: analytics.test.ts  chat-graph.test.ts  chunker.test.ts  clip.test.ts  elasticsearch.test.ts  enrichment.test.ts  es-query-builder.test.ts  hash.test.ts  image-search.test.ts  messages.test.ts  migration.test.ts  people-graph.test.ts  query-parser.test.ts  timestamp.test.ts
src/db/: chat-graph.ts  elasticsearch.ts  memories.ts  people-graph.ts  qdrant.ts  schema.ts
src/embeddings/: clip.ts  openai.ts
src/indexer/: chunker.ts  contacts.ts  enrichment.ts  images.ts  index.ts  messages.ts  state.ts
src/scripts/: debug-contacts.ts  debug-indexer.ts  debug-people-graph.ts  deep-verify.ts  explore-db.ts  index.ts  (+8 more)
streamlit/: app.py
(+24 files in other folders)
